--- a/src/app/landing-page-styles/team.module.css
+++ b/src/app/landing-page-styles/team.module.css
@@ -691,7 +691,7 @@
   font-family: var(--font-jetbrains-mono) !important;
   font-size: 13px;
   font-weight: 600;
-  color: #999;
+  color: #595959;
 }
 
 .tsThumbMeta {
